<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_summary"
            style="@style/about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_lessinfo"
            android:text="@string/summary" />

        <TextView
            android:id="@+id/summary"
            style="@style/about_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@color/codely_green" />

        <TextView
            android:id="@+id/title_description"
            style="@style/about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_moreinfo"
            android:text="@string/description" />

        <TextView
            android:id="@+id/description"
            style="@style/about_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_content"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@color/codely_green" />

        <TextView
            android:id="@+id/title_about"
            style="@style/about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_moreinfo"
            android:text="@string/about" />

        <LinearLayout
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/about_photo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/margin_10dp"
                android:src="@mipmap/ilia"/>

            <TextView
                style="@style/about_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/about_content" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@color/codely_green" />
    </LinearLayout>
</ScrollView>
